[tool.poetry]
name = "vas3k.club-bot"
version = "0.1.0"
description = "A telegram bot for vas3k.club"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.9.2"
envparse = "^0.2.0"

[tool.poetry.dev-dependencies]
isort = "^5.4.2"
black = "^19.10b0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
