[tool.poetry]
name = "vas3k.club-bot"
version = "0.1.0"
description = "A telegram bot for vas3k.club"
authors = ["Egor <egor.osokin7@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.9.2"
envparse = "^0.2.0"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
isort = "^5.4.2"
black = "^19.10b0"
flake8 = "^3.8.3"
pre-commit = "^2.7.1"

[tool.black]
line-length = 119
target_version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | snapshots
  )/
)
'''

[tool.isort]
line_length = 119
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
force_grid_wrap = 0

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
